--- a/style.scss
+++ b/style.scss
@@ -1,5 +1,5 @@
 @import "./mixins";
-@import "animate.css";
+// @import "animate.css";
 @import url("https://fonts.googleapis.com/css2?family=Josefin+Sans:ital,wght@0,100..700;1,100..700&display=swap");
 
 :root {
